emoji_window/emoji_window.h


// Button click callback type (stdcall)
// 鍙傛暟: button_id - 鎸夐挳ID, parent_hwnd - 鐖剁獥鍙ｅ彞鏌?
typedef void (__stdcall *ButtonClickCallback)(int button_id, HWND parent_hwnd);


// Tab 鍒囨崲鍥炶皟鍑芥暟绫诲瀷 (stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *TAB_CALLBACK)(HWND hTabControl, int selectedIndex);


// Tab 鍏抽棴鍥炶皟鍑芥暟绫诲瀷 (stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *TAB_CLOSE_CALLBACK)(HWND hTabControl, int index);


// Tab 鍙抽敭鐐瑰嚮鍥炶皟鍑芥暟绫诲瀷 (stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *TAB_RIGHTCLICK_CALLBACK)(HWND hTabControl, int index, int x, int y);


// Tab 鍙屽嚮鍥炶皟鍑芥暟绫诲瀷 (stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *TAB_DBLCLICK_CALLBACK)(HWND hTabControl, int index);


// 绐楀彛澶у皬鏀瑰彉鍥炶皟鍑芥暟绫诲瀷 (stdcall 璋冪敤绾﹀畾)
typedef void (__stdcall *WindowResizeCallback)(HWND hwnd, int width, int height);

    __declspec(dllexport) HWND __stdcall create_window_bytes_ex(const unsigned char* title_bytes, int title_len, int x, int y, int width, int height, UINT32 titlebar_color, UINT32 client_bg_color);


    __declspec(dllexport) int __stdcall create_emoji_button_bytes(
        HWND parent,
        const unsigned char* emoji_bytes,
        int emoji_len,
        const unsigned char* text_bytes,
        int text_len,
        int x, int y, int width, int height,
        UINT32 bg_color
    );


    __declspec(dllexport) void __stdcall set_button_click_callback(ButtonClickCallback callback);

    
    // 璁剧疆鎸夐挳浣嶇疆鍜屽ぇ灏?
    __declspec(dllexport) void __stdcall SetButtonBounds(int button_id, int x, int y, int width, int height);
    __declspec(dllexport) int __stdcall SetTitleBarTextColor(HWND hwnd, UINT32 color);
    __declspec(dllexport) int __stdcall SetTitleBarFont(HWND hwnd, const unsigned char* fontName, int fontNameLen, float fontSize);
    __declspec(dllexport) void __stdcall set_message_loop_main_window(HWND hwnd);
    __declspec(dllexport) int __stdcall run_message_loop();


    // ========== TabControl 鍔熻兘 ==========

    // 鍒涘缓 TabControl
    __declspec(dllexport) HWND __stdcall CreateTabControl(
        HWND hParent,
        int x,
        int y,
        int width,
        int height
    );


    // 娣诲姞 Tab 椤?
    __declspec(dllexport) int __stdcall AddTabItem(
        HWND hTabControl,
        const unsigned char* title_bytes,
        int title_len,
        HWND hContentWindow  // 鍙€夛紝鑻ヤ负 NULL 鍒欒嚜鍔ㄥ垱寤?
    );


    // 绉婚櫎 Tab 椤?
    __declspec(dllexport) BOOL __stdcall RemoveTabItem(
        HWND hTabControl,
        int index
    );


    // 璁剧疆 Tab 鍒囨崲鍥炶皟
    __declspec(dllexport) void __stdcall SetTabCallback(
        HWND hTabControl,
        TAB_CALLBACK pCallback
    );


    // 鍒囨崲鍒版寚瀹?Tab
    __declspec(dllexport) BOOL __stdcall SelectTab(
        HWND hTabControl,
        int index
    );


    // 鑾峰彇 Tab 鏁伴噺
    __declspec(dllexport) int __stdcall GetTabCount(
        HWND hTabControl
    );


    // 鑾峰彇鎸囧畾 Tab 鐨勫唴瀹圭獥鍙ｅ彞鏌?
    __declspec(dllexport) HWND __stdcall GetTabContentWindow(
        HWND hTabControl,
        int index
    );


    // 璁剧疆 TabControl 鐨勪綅缃拰澶у皬
    __declspec(dllexport) int __stdcall SetTabControlBounds(
        HWND hTabControl,
        int x,
        int y,
        int width,
        int height
    );


    // ========== TabControl 澶栬鍑芥暟 ==========

    // 璁剧疆鏍囩椤靛浐瀹氬昂瀵革紙瀹藉害鍜岄珮搴︼級
    __declspec(dllexport) int __stdcall SetTabItemSize(
        HWND hTab,
        int width,
        int height
    );


    // 璁剧疆鏍囩椤靛瓧浣擄紙fontName 涓?UTF-8 缂栫爜锛?
    __declspec(dllexport) int __stdcall SetTabFont(
        HWND hTab,
        const unsigned char* fontName,
        int fontNameLen,
        float fontSize
    );


    // 璁剧疆鏍囩椤甸鑹诧紙閫変腑/鏈€変腑鐨勮儗鏅壊鍜屾枃瀛楄壊锛孉RGB 鏍煎紡锛?
    __declspec(dllexport) int __stdcall SetTabColors(
        HWND hTab,
        UINT32 selectedBg,
        UINT32 unselectedBg,
        UINT32 selectedText,
        UINT32 unselectedText
    );


    // 璁剧疆閫変腑鏍囩椤靛簳閮ㄦ寚绀烘潯棰滆壊锛圓RGB 鏍煎紡锛?
    __declspec(dllexport) int __stdcall SetTabIndicatorColor(
        HWND hTab,
        UINT32 color
    );


    // 璁剧疆鏍囩椤靛唴杈硅窛锛堟按骞冲拰鍨傜洿锛?
    __declspec(dllexport) int __stdcall SetTabPadding(
        HWND hTab,
        int horizontal,
        int vertical
    );


    // 璁剧疆鎸囧畾鏍囩椤电殑鍐呭鍖哄煙鑳屾櫙鑹诧紙ARGB 鏍煎紡锛?
    __declspec(dllexport) int __stdcall SetTabContentBgColor(
        HWND hTab,
        int index,
        UINT32 color
    );


    // ========== TabControl 浜や簰澧炲己鍑芥暟 ==========

    // 璁剧疆鏍囩椤垫槸鍚︽樉绀哄叧闂寜閽紙closable: 1=鏄剧ず, 0=闅愯棌锛?
    __declspec(dllexport) int __stdcall SetTabClosable(
        HWND hTab,
        int closable
    );


    // 璁剧疆鏍囩椤靛叧闂洖璋?
    __declspec(dllexport) int __stdcall SetTabCloseCallback(
        HWND hTab,
        TAB_CLOSE_CALLBACK callback
    );


    // 璁剧疆鏍囩椤靛彸閿偣鍑诲洖璋?
    __declspec(dllexport) int __stdcall SetTabRightClickCallback(
        HWND hTab,
        TAB_RIGHTCLICK_CALLBACK callback
    );


    // 璁剧疆鏍囩椤垫槸鍚﹀彲鎷栨嫿鎺掑簭锛坉raggable: 1=鍙嫋鎷? 0=涓嶅彲鎷栨嫿锛?
    __declspec(dllexport) int __stdcall SetTabDraggable(
        HWND hTab,
        int draggable
    );


    // 璁剧疆鏍囩椤靛弻鍑诲洖璋?
    __declspec(dllexport) int __stdcall SetTabDoubleClickCallback(
        HWND hTab,
        TAB_DBLCLICK_CALLBACK callback
    );


    // 璁剧疆鏍囩鏍忔槸鍚﹀彲婊氬姩锛坰crollable: 1=鍙粴鍔? 0=涓嶅彲婊氬姩/澶氳锛?
    __declspec(dllexport) int __stdcall SetTabScrollable(
        HWND hTab,
        int scrollable
    );


    // ========== 绐楀彛澶у皬鏀瑰彉鍥炶皟 ==========

    // 璁剧疆绐楀彛澶у皬鏀瑰彉鍥炶皟
    __declspec(dllexport) void __stdcall SetWindowResizeCallback(
        WindowResizeCallback callback
    );


    // ========== 缂栬緫妗嗗姛鑳?==========

    // 鍒涘缓缂栬緫妗嗭紙vertical_center 浠呭崟琛屾湁鏁堬級
    __declspec(dllexport) HWND __stdcall CreateEditBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  // 0=宸? 1=涓? 2=鍙?
        BOOL multiline,
        BOOL readonly,
        BOOL password,
        BOOL has_border,
        BOOL vertical_center  // 鏂囨湰鍨傜洿灞呬腑锛堜粎鍗曡鏈夋晥锛?
    );


    // 璁剧疆缂栬緫妗嗕綅缃拰澶у皬
    __declspec(dllexport) void __stdcall SetEditBoxBounds(
        HWND hEdit,
        int x, int y, int width, int height
    );
    // ========== 鏍囩鍔熻兘 ==========  

    // 鍒涘缓鏍囩
    __declspec(dllexport) HWND __stdcall CreateLabel(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  // 0=宸? 1=涓? 2=鍙?
        BOOL word_wrap  // 鏄惁鎹㈣鏄剧ず
    );


    // 璁剧疆鏍囩鏂囨湰
    __declspec(dllexport) void __stdcall SetLabelText(
        HWND hLabel,
        const unsigned char* text_bytes,
        int text_len
    );


    // 璁剧疆鏍囩浣嶇疆鍜屽ぇ灏?
    __declspec(dllexport) void __stdcall SetLabelBounds(
        HWND hLabel,
        int x, int y, int width, int height
    );


    // ========== 杩涘害鏉″姛鑳?==========

    // 鍒涘缓杩涘害鏉?
    __declspec(dllexport) HWND __stdcall CreateProgressBar(
        HWND hParent,
        int x, int y, int width, int height,
        int initial_value,  // 鍒濆鍊?(0-100)
        UINT32 fg_color,
        UINT32 bg_color,
        BOOL show_text,     // 鏄惁鏄剧ず鐧惧垎姣旀枃鏈?
        UINT32 text_color   // 鏂囨湰棰滆壊
    );


    // 璁剧疆杩涘害鏉′綅缃拰澶у皬
    __declspec(dllexport) void __stdcall SetProgressBarBounds(
        HWND hProgressBar,
        int x, int y, int width, int height
    );